@@ -1,98 +1,95 @@
 # Gatling Log Parser CLI
 
-A user-friendly command-line tool for parsing Gatling binary simulation.log files and outputting all data in CSV format.
+A fast, self-contained command-line tool to turn Gatling binary `simulation.log` files (starting
+with [3.12+](https://github.com/gatling/gatling/issues/4596)) into CSV.
 
 ## Overview
 
-This CLI uses Gatling's internal binary log parser to extract all performance test data from simulation.log files and outputs it as CSV to stdout. It leverages the same parser that Gatling uses internally, ensuring compatibility and staying in sync with Gatling versions.
+This CLI uses Gatling's internal binary log parser to extract all performance test data from
+`simulation.log` files and outputs it as CSV to stdout. Built with Scala CLI and GraalVM Native
+Image, it provides instant startup times while maintaining compatibility with Gatling's internal
+format.
 
 ## Quick Start
 
-1. **Build the CLI:**
-   ```bash
-   sbt "project gatling-app" assembly
+1. Install [Scala CLI](https://scala-cli.virtuslab.org/)
+
+2. Build the CLI
+
+   ```sh
+   scala-cli package gatling-parser.scala --native-image --power --output gatling-parser
    ```
 
-2. **Run with a simulation log:**
-   ```bash
-   ./gatling-simulation-parse simulation.log > results.csv
+3. Run it
+
+   ```sh
+   ./gatling-parser simulation.log
    ```
 
-That's it! The CLI handles all the Java arguments automatically.
+## Development
+
+### Building for Development
+
+Compile and test with JVM (fast iteration):
+
+```sh
+scala-cli compile gatling-parser.scala
+scala-cli run gatling-parser.scala -- simulation.log
+```
+
+Run tests:
+
+```sh
+scala-cli test gatling-parser.scala
+```
+
+Format code:
+
+```sh
+scala-cli fmt gatling-parser.scala
+```
 
 ## Building
 
-### Build Fat JAR (Recommended)
+### Native Binary (Recommended for Distribution)
 
-```bash
-sbt "project gatling-app" assembly
+Build a self-contained native executable:
+
+```sh
+scala-cli package gatling-parser.scala --native-image --power --output gatling-parser
 ```
 
-This creates a standalone JAR at `gatling-app/target/gatling-simulation-parse.jar` and copies it to the root directory.
+This creates:
+- **Single executable file**: `gatling-parser` (~20MB)
+- **No JVM dependency**: Runs on any compatible system
+- **Instant startup**: <10ms vs 2-3s for JVM
+- **Self-contained**: Like Go/Rust binaries
 
-### Build for Development
+### JAR (For JVM environments)
 
-```bash
-sbt "project gatling-app" compile
+Build a standalone JAR:
+
+```sh
+scala-cli package gatling-parser.scala --assembly --power --output gatling-parser.jar
 ```
 
 ## Running
 
-### User-Friendly Wrapper Script (Recommended)
+### Native Binary (Recommended)
 
-After building, use the wrapper script that handles all Java arguments automatically:
-
-```bash
-./gatling-simulation-parse simulation.log
+```sh
+./gatling-parser simulation.log
 ```
 
-### Portable Version
+### JVM (if using JAR)
 
-For distribution, you can use the portable version (JAR + script):
-
-```bash
-./gatling-simulation-parse-portable simulation.log
+```sh
+java -jar gatling-parser.jar simulation.log
 ```
 
-### Direct JAR Execution
+## Command Line Options
 
-If you prefer to run the JAR directly:
-
-```bash
-java --add-opens=java.base/java.lang=ALL-UNNAMED -jar gatling-simulation-parse.jar simulation.log
-```
-
-### SBT Development Mode
-
-```bash
-sbt "project gatling-app" "runMain io.gatling.app.LogParserCli simulation.log"
-```
-
-### Usage Examples
-
-**Basic usage (clean CSV output):**
-```bash
-./gatling-simulation-parse simulation.log
-```
-
-**With debug logging enabled:**
-```bash
-./gatling-simulation-parse --debug simulation.log
-```
-
-**Save output to file:**
-```bash
-./gatling-simulation-parse simulation.log > results.csv
-```
-
-**Count successful requests:**
-```bash
-./gatling-simulation-parse simulation.log 2>/dev/null | grep "^request.*,OK," | wc -l
-```
-
-### Command Line Options
-
-- `--debug`: Enable debug logging output. By default, only clean CSV data is output to stdout, with debug logs suppressed for clean CSV processing.
+- `--debug`: Enable debug logging output. By default, only clean CSV data is output to stdout.
 - `<simulation.log>`: Path to the Gatling binary simulation log file
 
 ## Output Format
@@ -115,24 +112,10 @@ record_type,scenario_name,group_hierarchy,request_name,status,start_timestamp,en
 - `error_message`: Error description (if any)
 - `is_incoming`: "true" for unmatched incoming events, "false" for regular requests
 
-```sh
-grep request results.csv | head -2
-```
-
-> [!NOTE]
-> A request has no scenario name. In the OSS dashboard you can also not see anything about
-> scenarios. Maybe scenarios are a pure enterprise features when it comes to visualization.
-> The requests are grouped by the HTTP/request name in the details page. That name also shows up in
-> the assertions on the global page.
-
 **User Records** (`record_type=user`):
 - `scenario_name`: Name of the scenario
 - `event_type`: "start" or "end"
 - `start_timestamp`: Unix timestamp in milliseconds
-
-```sh
-head -1 results.csv;grep user results.csv | head -2
-```
 
 **Group Records** (`record_type=group`):
 - `group_hierarchy`: Pipe-separated group names
@@ -141,68 +124,30 @@ head -1 results.csv;grep user results.csv | head -2
 - `duration_ms`: Group duration in milliseconds
 - `cumulated_response_time_ms`: Sum of response times
 
-```sh
-head -1 results.csv;grep group, results.csv | head -1
-```
-
 **Error Records** (`record_type=error`):
 - `error_message`: Error description
 - `start_timestamp`: Unix timestamp in milliseconds
 
-> [!NOTE]
-> Have not seen any yet.
+## Installation
 
-## Requirements
+### Option 1: Download Pre-built Binary
 
-- SBT (for building and running)
-- Java 17+ with `--add-opens=java.base/java.lang=ALL-UNNAMED` (automatically configured)
+TODO release to GH
 
-## Technical Details
+1. Download the `gatling-parser` binary from releases
+2. Make it executable: `chmod +x gatling-parser`
+3. Run: `./gatling-parser simulation.log`
 
-- Uses Gatling's internal `LogFileReader` from `gatling-charts` module
-- Streams records as CSV output without loading entire file into memory
-- Handles string caching and binary format parsing automatically
-- CSV values are properly escaped for special characters (quotes, commas, newlines)
-- Skips version compatibility checks to allow parsing logs from different Gatling versions
-- **Clean Output**: By default, suppresses all debug logging to ensure clean CSV output suitable for piping and processing
-- **Debug Mode**: Use `--debug` flag to enable full logging for troubleshooting
+### Option 2: Build from Source
 
-## Testing
+1. Install Scala CLI
+2. Clone/download the source
+3. Build: `scala-cli package gatling-parser.scala --native-image --power --output gatling-parser`
+4. Run: `./gatling-parser simulation.log`
 
-The provided `simulation.log` contains 97 successful HTTP requests, which can be verified with:
+### Option 3: Use JVM Version
 
-```bash
-./gatling-simulation-parse simulation.log 2>/dev/null | grep "^request.*,OK," | wc -l
-```
+1. Install Java 17+
+2. Build JAR: `scala-cli package gatling-parser.scala --assembly --power --output gatling-parser.jar`
+3. Run: `java -jar gatling-parser.jar simulation.log`
 
-Expected output: `97`
-
-### Alternative Testing Methods
-
-**Using the portable version:**
-```bash
-./gatling-simulation-parse-portable simulation.log 2>/dev/null | grep "^request.*,OK," | wc -l
-```
-
-**Using the JAR directly:**
-```bash
-java --add-opens=java.base/java.lang=ALL-UNNAMED -jar gatling-simulation-parse.jar simulation.log 2>/dev/null | grep "^request.*,OK," | wc -l
-```
-
-**Using SBT:**
-```bash
-sbt "project gatling-app" "runMain io.gatling.app.LogParserCli simulation.log" 2>&1 | grep -E '^request.*,OK,' | wc -l
-```
-
-## Distribution
-
-To distribute the CLI tool, provide users with:
-
-1. **gatling-simulation-parse.jar** - The fat JAR containing all dependencies
-2. **gatling-simulation-parse-portable** - The wrapper script that handles Java arguments
-
-Users can then run:
-```bash
-chmod +x gatling-simulation-parse-portable
-./gatling-simulation-parse-portable simulation.log > results.csv
-```
